<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/image_game"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/item_game_img_description"
            app:layout_constraintEnd_toStartOf="@id/txt_title"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            android:layout_marginEnd="20dp"
            tool:src="@tools:sample/avatars" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_title"
            app:layout_constraintStart_toEndOf="@id/image_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_game"
            tool:text="@string/item_game_title"
            android:textSize="26sp"
            />

    <RatingBar
        android:id="@+id/rating_bar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:isIndicator="true"
        android:numStars="5"
        android:stepSize="0.1"
        app:layout_constraintStart_toStartOf="@id/txt_title"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        />

    <TextView
        android:id="@+id/txt_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toEndOf="@+id/rating_bar"
        app:layout_constraintTop_toTopOf="@+id/rating_bar"
        tool:text="@string/item_game_rating" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/txt_platform"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/rating_bar"
        app:layout_constraintStart_toStartOf="@id/rating_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tool:text="@string/item_game_platform"
        />
</androidx.constraintlayout.widget.ConstraintLayout>