<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    app:cardCornerRadius="30dp"
    android:layout_marginBottom="10dp"
    android:layout_height="wrap_content"
    style="@style/CardView.Light">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <ImageView
            android:layout_margin="20dp"
            android:id="@+id/image_game"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            android:contentDescription="@string/item_game_img_description"
            app:layout_constraintEnd_toStartOf="@id/txt_title"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="centerCrop"
            android:background="#DDDDDD"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_title"
            android:layout_marginEnd="40dp"
            android:background="#DDDDDD"
            android:textColor="#00000000"
            app:layout_constraintStart_toEndOf="@id/image_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_game"
            tool:text="@string/item_game_title"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/rating_bar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="#DDDDDD"
            android:textColor="#00000000"
            android:theme="@style/RatingBar"
            app:layout_constraintStart_toStartOf="@id/txt_title"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            />

        <TextView
            android:id="@+id/txt_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_text"
            android:background="#DDDDDD"
            android:textColor="#00000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toEndOf="@+id/rating_bar"
            app:layout_constraintTop_toTopOf="@+id/rating_bar"
            tool:text="@string/item_game_rating" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/txt_platform"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            android:background="#DDDDDD"
            android:textColor="#00000000"
            app:layout_constraintTop_toBottomOf="@id/rating_bar"
            app:layout_constraintStart_toStartOf="@id/rating_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tool:text="@string/item_game_platform"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>